# skatsearch

./: .gitignore  CLI_REFERENCE.md  Cargo.toml  README.md  analyze_loss_games.py  analyze_pimc_vs_standard.py  analyze_strategies.py  build_err.txt  build_log.txt  check_hand_sim_status.ps1  compare_all_strategies.py  compare_csv_counts.py  compilation_errors.txt  data.txt  debug_log.txt  example_deal.json  fetch_null_sim_parts.ps1  fetch_server_results.ps1  fix_wasm.py  fix_wasm_v2.py  fix_wasm_v3.py  fix_wasm_v4.py  generated_smart_deal.json  generated_smart_suit_deal.json  heur20_example_output.txt  merge_null_parts.ps1  null_playout_log.txt  out.txt  output.txt  pimc_avg_heuristic_comparison_log.txt  pimc_err.txt  pimc_out.txt  pimc_sample_comparison_log.txt  pimc_strategy_comparison_log.txt  playout_err.txt  playout_raw.txt  points_playout_log.txt  points_smart_log.txt  run_all_tests.ps1  run_comparative_playouts.py  (+37 more)
.claude/: settings.local.json
doc/: interface_methods.txt  skatcalc.txt  todo.txt
research/: analyze_bubbles_grand_post.py  analyze_bubbles_hand.py  analyze_bubbles_hand_grand.py  analyze_bubbles_hand_suit.py  analyze_bubbles_post.py  analyze_bubbles_pre.py  analyze_decision_boundary.py  analyze_decision_map.py  analyze_hand_advantage.py  analyze_null_gaps.py  analyze_stagnation.py  analyze_stagnation_shift.py  create_decision_pdf.py  dump_decision.py  null_analysis_output.txt  null_gaps_analysis.csv  run_general_sim_10k.ps1  run_general_sim_50k.ps1  run_general_sim_50k.sh  run_grand_sim_25k.ps1  run_sim_10k.ps1
src/: args.rs  consts.rs  lib.rs  (+7 more)
(+250 files in other folders)
