[package]
name = "skat_aug23"
version = "0.1.0"
authors = ["Frank Peuker <jenafrank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 

[profile.release]
debug = 1